# eeoyoo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-config-change.sh  handle-cwd-changed.sh  handle-elicitation-result.sh  handle-elicitation.sh  handle-file-changed.sh  handle-instructions-loaded.sh  handle-notification.sh  handle-permission-denied.sh  handle-permission-request.sh  handle-post-compact.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop-failure.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-task-created.sh  handle-teammate-idle.sh  handle-user-prompt-submit.sh  handle-worktree-create.sh  handle-worktree-remove.sh
.moai/: manifest.json
.moai/config/sections/: gate.yaml  git-strategy.yaml  project.yaml  system.yaml  user.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: session-4d3380db-4555-4fd8-a595-d8613d8d99ef.md  session-6f1670b8-1c12-44b8-9216-9e65602e0b55.md  session-f80441c2-7127-4e12-add6-156047233ac1.md  sync-report-SPEC-MOUSE-001.md  trust5-SPEC-MOUSE-001.md
.moai/specs/SPEC-MOUSE-001/: acceptance.md  plan.md  progress.md  spec.md  (+3 more)
.moai/state/: session-memo.md
benchmarks/: bench_latency.py
configs/: eou.example.yaml  eou.host.example.yaml  eou.remote.example.yaml
scripts/: install.bat  install.ps1
src/eou/: bridge.py  cli.py  config.py  host.py  remote.py
tests/: conftest.py
tests/fakes/: mouse.py  transport.py  visibility.py
tests/integration/: test_cli_smoke.py  test_e2e_loopback.py  test_tcp_loopback.py
tests/meta/: test_import_boundaries.py
tests/unit/: test_cli_unit.py  test_config.py  test_event_bridge.py  test_host.py  test_host_coverage.py  test_remote.py  test_remote_coverage.py
(+34 files in other folders)
